<resources>
    <string name="app_name">MicroTravelNotes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="img">img</string>

    <string name="square">广场</string>
    <string name="hot">热门</string>
    <string name="liked">关注</string>
    <string name="main_page">首页</string>
    <string name="topic">话题</string>
    <string name="message">消息</string>
    <string name="user">用户</string>
    <string name="title_activity_article_details">ArticleDetailsActivity</string>


    <string name="back">返回</string>
    <string name="share">分享</string>
    <string name="article">游记</string>
    
    <string name="toolbar_main_page">MainPage</string>
    <string name="toolbar_topic">Topic</string>
    <string name="toolbar_user">User</string>
    <string name="toolbar_message">Message</string>

    <string name="has_liked">已关注</string>
    <string name="has_not_liked">未关注</string>
    <string name="title_activity_new_article">NewArticleActivity</string>
</resources>
