<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_gravity="bottom|center_vertical"
        android:background="@color/default_black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/relative_main_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mainpage" />

            <TextView
                style="@style/TextAppearance.Tabs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_page" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relative_topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/topic" />

            <TextView
                style="@style/TextAppearance.Tabs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="bottom|center_vertical"
        android:id="@+id/tab_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tab_camera_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/camera" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="bottom|center_vertical"
        android:background="@color/default_black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/relative_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/message" />

            <TextView
                style="@style/TextAppearance.Tabs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relative_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/user" />

            <TextView
                style="@style/TextAppearance.Tabs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>